lot of tweaking been added

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -7,12 +7,31 @@
 {% endblock %}
 
 {% block content %}
-<div class="flex flex-col items-center justify-center mt-20">
-    <h1 class="text-6xl font-bold text-white mb-8 glow-text">About Us</h1> 
-
-<p class="text-white text-lg mb-6 fade-in"> About us contents goes here </p> 
-</div> 
-</div>
+<section class="py-16 px-6">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-semibold text-gray-400 mb-4 orbitron">About Odyssey-Studio</h2>
+      <p class="text-lg mb-8 fade-in">
+        After graduating from university, I founded <span class="font-bold text-emerald-600">Odyssey-Studio</span>.
+        The name is deeply inspired by the journey of <span class="font-bold text-emerald-600">Odysseus</span> in the battle of Troy,
+        symbolizing the perseverance, resilience, and determination needed to overcome life's challenges. My journey mirrors this in many ways—
+        despite facing the obstacle of being deaf, I am not deterred from pursuing a career as a web developer.
+      </p>
+      <p class="text-lg mb-8 fade-in">
+        While many have denied me opportunities due to my disability, I have refused to let it stop me. My deafness does not define my abilities or my work ethic.
+        I believe that every challenge is an opportunity for growth, and this mindset has driven me to gain invaluable skills and experience in web development.
+        I have continued to build my knowledge and expertise in various technologies, and I am confident in my ability to contribute meaningfully to any project.
+      </p>
+      <p class="text-lg mb-8 fade-in">
+        The name <span class="font-bold text-emerald-600">Odyssey-Studio</span> reflects this journey—just like Odysseus, who faced adversity yet never gave up,
+        I too have embarked on a path that demands resilience and perseverance. <span class="font-bold text-emerald-600">Odyssey-Studio</span> represents not just my company
+        but also my personal mission to break barriers and prove that disability does not limit potential.
+      </p>
+      <p class="text-lg fade-in">
+        You can find my <a href="https://kelvin.odyssey-studio.co.uk" class="text-emerald-600 underline underline-offset-4 decoration-2 decoration-emerald-500 hover:text-green-500 hover:font-bold" target="_blank">CV</a> showcasing the skills, experience, and determination I have gained along this path.
+      </p>
+    </div>
+</section>
+  
 {% endblock %}
 
 {% block footer %}
