--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -1,3 +1,12 @@
-<footer class="bg-gray-800 text-center p-4">
-    <p>&copy; 2002 - {{ current_year }} Odyssey Studio</p>
+<footer class="flex sm:flex-row flex-col bg-gray-800 text-center p-5 justify-between items-center space-y-2">
+    <div>
+    </div>
+    <div>
+        <p>&copy; 2002 - {{ current_year }} Odyssey-Studio. All rights reserved.</p>
+    </div>
+    <div class="flex gap-3">
+        <a href="https://www.github.com/oroshi80" target="_blank"><i class="fa-brands fa-github text-lg hover:text-gray-500"></i></a> 
+        <a href="https://www.linkedin.com/in/kelvin-ms/" target="_blank"><i class="fa-brands fa-linkedin text-lg hover:text-blue-500"></i></a>
+        <a href="https://discord.gg/Zeqw9zusFh" target="_blank"><i class="fa-brands fa-discord text-lg hover:text-purple-500"></i></a>
+    </div>
 </footer>
