--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load form_filters %}
 
 {% block title %}Contact - Odyssey Studio{% endblock %}
 
@@ -8,11 +9,70 @@
 
 {% block content %}
 <div class="flex flex-col items-center justify-center mt-20">
-    <h1 class="text-6xl font-bold text-white mb-8 glow-text">Contact Us</h1> 
+    <h2 class="text-3xl font-semibold text-gray-400 mb-4 orbitron">Contact form</h2>
 
-<p class="text-white text-lg mb-6 fade-in"> Contact us contents goes here </p> 
+    <form method="post" class="space-y-4 w-full max-w-lg">
+        {% csrf_token %}
+        
+        <div class="flex flex-col fade-in">
+            <label for="{{ form.name.id_for_label }}" class="text-sm font-medium">Name</label>
+            {{ form.name|add_class:"contact-input border border-gray-300 p-2 rounded-md focus:outline-none hover:outline-1 hover:outline-offset-1 hover:outline-emerald-600 transition-all duration-300 ease-in-out opacity-100 hover:opacity-80" }}
+            {% if form.name.errors %}
+                <div class="text-red-500 text-sm mt-1">
+                    {% for error in form.name.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </div>
+    
+        <div class="flex flex-col fade-in">
+            <label for="{{ form.email.id_for_label }}" class="text-sm font-medium">Email</label>
+            {{ form.email|add_class:"contact-input border border-gray-300 p-2 rounded-md focus:outline-none hover:outline-1 hover:outline-offset-1 hover:outline-emerald-600 transition-all duration-300 ease-in-out opacity-100 hover:opacity-80" }}
+            {% if form.email.errors %}
+                <div class="text-red-500 text-sm mt-1">
+                    {% for error in form.email.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </div>
+    
+        <div class="flex flex-col fade-in">
+            <label for="{{ form.subject.id_for_label }}" class="text-sm font-medium">Subject</label>
+            {{ form.subject|add_class:"contact-input border border-gray-300 p-2 rounded-md focus:outline-none hover:outline-1 hover:outline-offset-1 hover:outline-emerald-600 transition-all duration-300 ease-in-out opacity-100 hover:opacity-80" }}
+            {% if form.subject.errors %}
+                <div class="text-red-500 text-sm mt-1">
+                    {% for error in form.subject.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </div>
+    
+        <div class="flex flex-col fade-in">
+            <label for="{{ form.message.id_for_label }}" class="text-sm font-medium">Message</label>
+            {{ form.message|add_class:"contact-input border border-gray-300 p-2 rounded-md focus:outline-none hover:outline-1 hover:outline-offset-1 hover:outline-emerald-600 transition-all duration-300 ease-in-out opacity-100 hover:opacity-80" }}
+            {% if form.message.errors %}
+                <div class="text-red-500 text-sm mt-1">
+                    {% for error in form.message.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </div>
+    
+        <div class="flex flex-col fade-in">
+            <button type="submit" class="bg-emerald-600 text-white px-4 py-2 rounded-md 
+            hover:bg-emerald-500 hover:outline-2 hover:outline-offset-4 hover:outline-emerald-500 
+            focus:ring-2 focus:ring-emerald-400 focus:outline-none 
+            transition-all duration-300 ease-in-out opacity-100 hover:opacity-80">
+            Submit
+        </button>
+        
+        </div>
+    </form>
 </div> 
-</div>
 {% endblock %}
 
 {% block footer %}
