--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -7,10 +7,10 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="text-5xl text-white ml-5 mb-8">Welcome to Odyssey-Studio</h1> 
+<h1 class="text-4xl text-gray-400 text-center ml-5 mb-8 mt-4 orbitron">Welcome to Odyssey-Studio</h1> 
 <div class="flex flex-col items-center justify-center mt-20">
 
-<p class="text-white text-lg mb-6 fade-in"> We're working hard to bring you something amazing. Stay tuned! </p> 
+<p class="text-white text-lg mb-6 fade-in">We're working hard to bring you something amazing. Stay tuned! </p> 
 <p class="text-white text-lg mb-8 fade-in">Meanwhile, check out: </p> 
 
 <div class="flex flex-col items-center space-y-4 fade-in"> 
