--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -1,11 +1,30 @@
-<nav class="bg-gray-800/50 text-white p-4 flex justify-between items-center h-[80px] sticky top-0 z-10 backdrop-blur-md border-b-2 border-gray-700">
+<nav class="bg-gray-800/50 text-white p-4 flex sm:flex-row flex-col justify-between items-center h-auto sticky top-0 z-10 backdrop-blur-md border-b-2 border-gray-700">
     <div>
         <span class="text-4xl font-bold mb-8 glow-text orbitron">Odyssey Studio</span>
     </div>
-    <div>
-        <a href="/" class="{% if active_page == 'home' %}underline decoration-blue-500 underline-offset-4 decoration-2{% endif %} hover:text-gray-300">Home</a>
-        <a href="/about" class="{% if active_page == 'about' %}underline decoration-blue-500 underline-offset-4 decoration-2{% endif %} hover:text-gray-300 ml-4">About</a>
-        <a href="/contact" class="{% if active_page == 'contact' %}underline decoration-blue-500 underline-offset-4 decoration-2{% endif %} hover:text-gray-300 ml-4">Contact</a>
+    <div class="mt-2 sm:mt-0">
+        <a href="/" class="{% if active_page == 'home' %}underline decoration-emerald-500 underline-offset-4 decoration-2{% endif %} hover:text-gray-300 hover:decoration-emerald-600 ml-4 inline-flex items-baseline relative group">
+            <i class="fa-solid fa-house"></i>&nbsp; Home
+            <span class="absolute left-1/2 bottom-[-1px] w-0 h-0.5 bg-emerald-600 transform -translate-x-1/2 group-hover:w-full transition-all duration-300 ease-in-out"></span>
+        </a>
+        <a href="https://chat.odyssey-studio.co.uk" target="_blank" class="hover:text-gray-300 hover:decoration-emerald-600 ml-4 inline-flex items-baseline relative group">
+            <i class="fa-regular fa-comments"></i>&nbsp; Chat
+            <span class="absolute left-1/2 bottom-[-1px] w-0 h-0.5 bg-emerald-600 transform -translate-x-1/2 group-hover:w-full transition-all duration-300 ease-in-out"></span>
+        </a>
+        <a href="https://kelvin.odyssey-studio.co.uk" target="_blank" class="hover:text-gray-300 hover:decoration-emerald-600 ml-4 inline-flex items-baseline relative group">
+            <i class="fa-solid fa-user-tie"></i>&nbsp; CV/Portfolio
+            <span class="absolute left-1/2 bottom-[-1px] w-0 h-0.5 bg-emerald-600 transform -translate-x-1/2 group-hover:w-full transition-all duration-300 ease-in-out"></span>
+        </a>
+        <a href="/about" class="{% if active_page == 'about' %}underline decoration-emerald-500 underline-offset-4 decoration-2{% endif %} hover:text-gray-300 hover:decoration-emerald-600 ml-4 inline-flex items-baseline relative group">
+            <i class="fa-solid fa-circle-info"></i>&nbsp; About
+            <span class="absolute left-1/2 bottom-[-1px] w-0 h-0.5 bg-emerald-600 transform -translate-x-1/2 group-hover:w-full transition-all duration-300 ease-in-out"></span>
+        </a>
+        <a href="/contact" class="{% if active_page == 'contact' %}underline decoration-emerald-500 underline-offset-4 decoration-2{% endif %} hover:text-gray-300 hover:decoration-emerald-600 ml-4 inline-flex items-baseline relative group">
+            <i class="fa-solid fa-envelope"></i>&nbsp; Contact
+            <span class="absolute left-1/2 bottom-[-1px] w-0 h-0.5 bg-emerald-600 transform -translate-x-1/2 group-hover:w-full transition-all duration-300 ease-in-out"></span>
+        </a>
     </div>
+    
+   
 </nav>
 
